# pairwise

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  architecture.md
.github/workflows/: cuda-compile-check.yml  rust.yml
crates/pairstat/: Cargo.toml
crates/pairstat/benches/: my_benchmark.rs
crates/pairstat/src/: accumulator.rs  apply.rs  error.rs  func.rs  lib.rs  parallel_serial.rs  reducers.rs  wrapped_reducer.rs
crates/pairstat/tests/: accumulator_tests.rs  compared_integration_test.rs  integration_tests.rs  parallel_tests.rs
crates/pairstat/tests/common/: mod.rs
crates/pairstat_nostd_internal/: Cargo.toml
crates/pairstat_nostd_internal/src/: bins.rs  lib.rs  misc.rs  onepoint.rs  parallel.rs  reduce_utils.rs  state.rs
crates/pairstat_nostd_internal/src/reduce_sample/: chunked.rs  mod.rs  unordered.rs
crates/pairstat_nostd_internal/src/twopoint/: common.rs  idx_3d_offset.rs  mod.rs  spatial.rs  twopoint_cartesian.rs  unstructured.rs
crates/pairstat_test/: Cargo.toml  README.md
crates/pairstat_test/src/: lib.rs
crates/pairwise/: Cargo.toml
crates/pairwise/src/: accumulator.rs  apply.rs  apply_points.rs  error.rs  func.rs  lib.rs  misc.rs  parallel_serial.rs  reducers.rs  wrapped_reducer.rs
crates/pairwise/tests/: accumulator_tests.rs  compared_integration_test.rs  integration_tests.rs  parallel_tests.rs
crates/pairwise/tests/common/: mod.rs
crates/pairwise_internal/: Cargo.toml
crates/pairwise_internal/src/: accumulator.rs  apply_points.rs  lib.rs  misc.rs
crates/pairwise_nostd_internal/: Cargo.toml
crates/pairwise_nostd_internal/src/: accumulator.rs  apply_cartesian.rs  apply_points.rs  bins.rs  device_replicate_view.rs  displacement_vec.rs  idx_3d_offset.rs  lib.rs  misc.rs  parallel.rs  reduce_sample.rs  reduce_utils.rs  reducer.rs  spatial.rs  state.rs
crates/pairwise_nostd_internal/src/reduce_sample/: README.md  chunked.rs  common.rs  mod.rs  unordered.rs
crates/pairwise_nostd_internal/src/twopoint/: common.rs  idx_3d_offset.rs  mod.rs  twopoint_cartesian.rs  unstructured.rs
plugin/: README.md
plugin/pairwise_cuda/: Cargo.toml  README.md  rust-toolchain.toml
plugin/pairwise_cuda/kernels/: Cargo.toml
plugin/pairwise_cuda/kernels/src/: lib.rs
plugin/pairwise_cuda/src/: lib.rs  main.rs
plugin/pairwise_cuda/tests/: vecadd.rs
src/: apply_points.rs  cartesian_block.rs  lib.rs  misc.rs  vecpack.rs
tests/: integration_tests.rs
tools/: check_rust_cuda_version.py
