[package]
name = "pairstat_nostd_internal"
description = "Implements internal logic for the pairstat crate"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true


[dependencies]
# we disable default-features since this crate is no-std
ndarray = { version = "0.16", default-features = false }
