[package]
name = "pairwise_nostd_internal"
version = "0.1.0"
edition = "2024"
authors = ["Matthew W. Abruzzo", "Adam J. Wheeler"]
rust-version = "1.86"

[dependencies]
# we disable default-features since this crate is no-std
ndarray = { version = "0.16", default-features = false }
cust_core = { git = "https://github.com/Rust-GPU/Rust-CUDA", rev = "3b646e6891dbe8dc1821d400f17d97716e931604", optional = true }

[features]
cuda = ["dep:cust_core"]
