[package]
name = "vecadd-kernels"
version = "0.1.0"
edition = "2024"

[workspace]
# an empty workspace is needed to avoid confusion!

[dependencies]
cuda_std = {git = "https://github.com/Rust-GPU/Rust-CUDA", revision = "3b646e6891dbe8dc1821d400f17d97716e931604"}

[lib]
crate-type = ["cdylib", "rlib"]
